--- a/css/top-section.css
+++ b/css/top-section.css
@@ -16,8 +16,8 @@
 
 .phone-img {
 	padding: 0px;
-/*	width: 300px;
-*/	/*margin-bottom: 5rem;*/
+/*	width: 300px;*/	
+	margin-bottom: 5rem;
 }
 
 .time-logo-section {
